--- a/config/database.yml
+++ b/config/database.yml
@@ -19,11 +19,11 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres
-  password: 1234
+  password: Baraza2011
 
 development:
   <<: *default
-  database: culture_development
+  database: learn_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: culture_test
+  database: learn_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: culture_production
-  username: culture
+  database: learn_production
+  username: learn
   password: <%= ENV["CULTURE_DATABASE_PASSWORD"] %>
